--- a/css/main.css
+++ b/css/main.css
@@ -195,15 +195,18 @@ text-align: center;
 border-radius: 0 0 30px 30px;
 overflow: hidden;
 margin-bottom: 50px;
-height: 400px;
+height: 500px;
 position: relative;
+}
+.color{
+    color: #000;
 }
 .prices .prices-table .price-type{
     font-size: 20px;
     color: #888;
 }
 .prices .prices-table .price-total{
-    font-size: 30px;
+    font-size: 21px;
     color: #333;
     margin-bottom: 30px;
 }
